--- a/.env.docker
+++ b/.env.docker
@@ -2,6 +2,7 @@
 
 # Application
 export FLASK_APP=fittrackee/__main__.py
+export FLASK_ENV=development
 # export HOST=
 # export PORT=
 export APP_SETTINGS=fittrackee.config.DevelopmentConfig
