--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,6 +10,8 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
 
   fittrackee:
     container_name: fittrackee
@@ -26,6 +28,11 @@ services:
       - fittrackee-db
       - redis
       - mail
+    volumes:
+      - ./fittrackee:/usr/src/app/fittrackee
+      - ./fittrackee_client:/usr/src/app/fittrackee_client
+      - ./data/workouts:/usr/src/app/workouts
+      - ./data/uploads:/usr/src/app/uploads
 
   redis:
     container_name: fittrackee-redis
@@ -40,4 +47,3 @@ services:
     ports:
       - 1025:1025
       - 8025:8025
-
