--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,1 @@
-.idea
-.git
-.mypy_cache
-.pytest_cache
-.venv
-.env
-.coverage
-.eslintcache
-docker-compose-dev.yml
-Makefile.custom.config
-*.log
+data
