--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,7 +12,7 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - ./data/db:/var/lib/postgresql/data
-
+  
   fittrackee:
     container_name: fittrackee
     build: .
@@ -30,7 +30,8 @@ services:
       - mail
     volumes:
       - .:/usr/src/app
-      - fittrackee_upload:/uploads:rw
+      - ./data/workouts:/usr/src/app/workouts
+      - ./data/uploads:/usr/src/app/uploads
 
   fittrackee_client:
     container_name: fittrackee_client
@@ -63,6 +64,3 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
-
-volumes:
-  fittrackee_upload:
