--- a/fittrackee_client/.eslintrc.json
+++ b/fittrackee_client/.eslintrc.json
@@ -30,7 +30,7 @@
     "no-cond-assign": "error",
     "no-confusing-arrow": "off",
     "no-console": [
-      "error",
+      "warn",
       {
         "allow": ["warn", "error", "info"]
       }
