--- a/fittrackee_client/package.json
+++ b/fittrackee_client/package.json
@@ -3,9 +3,11 @@
   "version": "0.4.9",
   "private": true,
   "dependencies": {
+    "@mapbox/geojson-merge": "^1.1.1",
     "@mapbox/togeojson": "^0.16.0",
     "connected-react-router": "^6.9.1",
     "date-fns": "^2.22.1",
+    "geolib": "^3.3.3",
     "history": "^4.10.1",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
