--- a/fittrackee_client/package.json
+++ b/fittrackee_client/package.json
@@ -13,6 +13,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-xhr-backend": "^3.2.2",
     "leaflet": "^1.7.1",
+    "leaflet-fullscreen": "^1.0.2",
     "luxon": "^2.0.2",
     "object-hash": "^2.2.0",
     "react": "^17.0.2",
